--- a/package.json
+++ b/package.json
@@ -7,9 +7,8 @@
     "start": "cross-env NODE_ENV=production node index.js",
     "dev": "cross-env NODE_ENV=development nodemon index.js",
     "test": "cross-env NODE_ENV=test jest --verbose --runInBand",
-    "lint": "eslint .",
-    "build-frontend": "cd blog-frontend && npm run build"
-
+    "lint": "eslint . && cd bloglist-frontend && npm run eslint",
+    "build-frontend": "cd bloglist-frontend && npm run build"
   },
   "repository": {
     "type": "git",
@@ -33,7 +32,11 @@
   },
   "devDependencies": {
     "cross-env": "^7.0.3",
-    "eslint": "^8.43.0",
+    "eslint": "^8.48.0",
+    "eslint-config-standard": "^17.1.0",
+    "eslint-plugin-import": "^2.28.1",
+    "eslint-plugin-n": "^16.0.2",
+    "eslint-plugin-promise": "^6.1.1",
     "jest": "^29.5.0",
     "supertest": "^6.3.3"
   },
