--- a/bloglist-frontend/package.json
+++ b/bloglist-frontend/package.json
@@ -4,11 +4,11 @@
   "private": true,
   "dependencies": {
     "axios": "^1.2.3",
+    "jsonwebtoken": "^9.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4",
-    "jsonwebtoken": "^9.0.0"
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -47,6 +47,7 @@
     "eslint-plugin-cypress": "^2.13.3",
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-jest": "^27.2.2",
+    "eslint-plugin-react": "^7.33.2",
     "jest": "^27.5.1"
   },
   "jest": {
