--- a/bloglist-frontend/package.json
+++ b/bloglist-frontend/package.json
@@ -4,11 +4,12 @@
   "private": true,
   "dependencies": {
     "axios": "^1.2.3",
+    "eslint-plugin-react": "^7.33.2",
+    "jsonwebtoken": "^9.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4",
-    "jsonwebtoken": "^9.0.0"
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
