--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "test": "cross-env NODE_ENV=test jest --verbose --runInBand",
     "lint": "eslint . && cd bloglist-frontend && npm run eslint",
     "build-frontend": "cd bloglist-frontend && npm run build"
+    "install-all": "npm install && cd bloglist-frontend && npm install"
+
   },
   "repository": {
     "type": "git",
