--- a/.github/workflows/pipeline.yaml
+++ b/.github/workflows/pipeline.yaml
@@ -18,7 +18,7 @@ jobs:
         with:
           node-version: '16'
       - name: Install dependencies
-        run: npm install-all
+        run: npm install && cd bloglist-frontend && npm install
       - name: linter
         run: npm run lint
       - name: tests
