--- a/.github/workflows/helthCheck.yaml
+++ b/.github/workflows/helthCheck.yaml
@@ -1,6 +1,7 @@
 on:
-  schedule:
-    - cron: '0 17 * * *'  # Runs every day at 17:00
+  push:
+    branches:
+    - master
 
 jobs:
    main:
@@ -12,4 +13,4 @@ jobs:
         uses: jtalk/url-health-check-action@v3
         with:
           # Check the following URLs one by one sequentially
-          url: https://dinoapp-uefk.onrender.com/
+          url: https://blogapp-mk0k.onrender.com
